Initial MVP finished

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     <p class="info-panel__hint">Click enemy cells to attack after starting the game.</p>
   </aside>
 
+  <!-- ===== GAME OVER OVERLAY ===== -->
+  <div id="game-over-overlay" class="game-over-overlay">
+    <div class="game-over-overlay__card">
+      <h2 id="game-over-title" class="game-over-overlay__title"></h2>
+      <p id="game-over-subtitle" class="game-over-overlay__subtitle"></p>
+      <button id="game-over-btn" class="game-over-overlay__btn">Play Again</button>
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
